Bug 389933 - "ASSERTION: JoinNode called with node not listed in offset table while editing HTML email in GMail" [p=chris@pearce.org.nz (Chris Pearce [cpearce]) r=peterv sr=roc a1.9=schrep]